# mmhdc

./: .gitignore  LICENSE  README.md  environment.yaml  main.py  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  pytest.yml
ablation/: mnist_reg_vs_dim.py  mnist_reg_vs_dim_config.py  plot_from_pt.py  plot_utils.py
configs/: default_mnist_config.py
configs/mnist/hdc/: default_hdc_config.py  mmhdc_multi_config.py
data/: __init__.py
example/: example.py  mnist_config.py  requirements.txt
hdc/: __init__.py  mmhdc.cpp  mmhdc.py  transform.py
tests/: requirements.txt  test_mmhdc.py  test_step.py
