[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmhdc"
version = "0.1.0"
description = "Maximum-margin hyperdimensional computing"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Nikita Zeulin" },
]
dependencies = [
  "torch",
  "ninja",
]

[project.optional-dependencies]
examples = [
  "absl-py",
  "ml-collections",
  "ninja",
  "torchvision",
  "tqdm",
]
experiments = [
  "absl-py",
  "ml-collections",
  "ninja",
  "torchvision",
  "tqdm",
]
test = [
  "ml-collections",
  "ninja",
  "pytest",
  "torchvision",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mmhdc = ["cpp/*.cpp"]
