[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmhdc"
version = "0.1.3"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Nikita Zeulin" },
]
dependencies = [
  "torch",
]

[project.optional-dependencies]
cpp = ["ninja"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mmhdc = ["cpp/*.cpp"]
